<resources>
    <string name="app_name">My Pocket Doctor</string>
    <string name="a_doctor_nin_your_pocket">A doctor in your pocket</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabDiagnose">Diagnose</string>
    <string name="tabHistory">History</string>
    <string name="tabUsers">Users</string>
    <string name="my_pocket_doctor">My Pocket Doctor</string>
    <string name="add_new">Create new</string>
    <string name="type_your_symptoms">Type Your symptoms…</string>
    <string name="hallo_only">"Hello  "</string>
    <string name="how_can_i_help_you">\nHow can I help you today?</string>
    <string name="input_can_not_be_empty">Input can not be empty.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="dont_know">DON\'T KNOW</string>
    <string name="finish">FINISH</string>
    <string name="profile_name">"Profile name: "</string>
    <string name="sex">Sex:</string>
    <string name="birth_date">Birth date:</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="add">Add</string>
    <string name="_1995_03_23">1995-03-23</string>
    <string name="add1">ADD</string>
    <string name="most_likely_condition">Your condition is most likely:</string>
    <string name="show_more">SHOW MORE</string>
    <string name="export_to_pdf">EXPORT TO PDF</string>
</resources>