<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:paddingStart="10dp"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/yes"
        android:padding="18sp"
        android:textColor="@color/background_grey"
        android:textSize="16sp"
        android:background="@drawable/togglebutton_selector"
        android:maxLines="1" />

    <Space
        android:layout_width="12dp"
        android:layout_height="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/no"
        android:padding="18sp"
        android:textColor="@color/background_grey"
        android:textSize="16sp"
        android:background="@drawable/togglebutton_selector"
        android:maxLines="1" />

    <Space
        android:layout_width="12dp"
        android:layout_height="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/dont_know"
        android:padding="18sp"
        android:textColor="@color/background_grey"
        android:textSize="16sp"
        android:background="@drawable/togglebutton_selector"
        android:maxLines="1" />

    <Space
        android:layout_width="12dp"
        android:layout_height="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/finish"
        android:padding="18sp"
        android:textColor="@color/background_grey"
        android:textSize="16sp"
        android:background="@drawable/togglebutton_selector"
        android:maxLines="1" />




</LinearLayout>